tooling/tree-sitter-stm/test/corpus/repeated_paths.txt
================================================================================
Path with intermediate repeated segment
================================================================================

mapping {
  source { src }
  target { tgt }
  Order.LineItems[].SKU -> sku
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier)))
      (map_arrow
        (src_path
          (field_path
            (identifier)
            (identifier)
            (identifier)))
        (tgt_path
          (field_path
            (identifier)))))))

================================================================================
Path with repeated segment at start
================================================================================

mapping {
  source { src }
  target { tgt }
  CartLines[].unit_price -> gross_merchandise_value
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier)))
      (map_arrow
        (src_path
          (field_path
            (identifier)
            (identifier)))
        (tgt_path
          (field_path
            (identifier)))))))

================================================================================
Computed arrow with repeated path in target
================================================================================

mapping {
  source { src }
  target { tgt }
  -> ShipmentHeader.asnDetails[].containers { "No source data available." }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier)))
      (computed_arrow
        (tgt_path
          (field_path
            (identifier)
            (identifier)
            (identifier)))
        (pipe_chain
          (pipe_step
            (nl_string)))))))

================================================================================
Mapping-level flatten metadata
================================================================================

mapping 'order lines' (flatten `Order.LineItems[]`) {
  source { commerce_order }
  target { order_lines }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (block_label
      (quoted_name))
    (metadata_block
      (key_value_pair
        (kv_key
          (identifier))
        (backtick_name)))
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier))))))

================================================================================
Mapping-level group_by and on_error metadata
================================================================================

mapping 'session aggregation' (group_by session_id, on_error log, error_threshold 0.02) {
  source { events }
  target { sessions }
}

--------------------------------------------------------------------------------

(source_file
  (mapping_block
    (block_label
      (quoted_name))
    (metadata_block
      (key_value_pair
        (kv_key
          (identifier))
        (identifier))
      (key_value_pair
        (kv_key
          (identifier))
        (identifier))
      (key_value_pair
        (kv_key
          (identifier))
        (number_literal)))
    (mapping_body
      (source_block
        (source_ref
          (identifier)))
      (target_block
        (source_ref
          (identifier))))))
